# duckdb-pythonf

./: CMakeLists.txt  build_with_vs.cmd  cibw_build.sh  claudelog.md  out  prepare_runner_image.sh  pyproject.toml  run_packaging_workflow.sh  run_workflow_with_act.sh  setup_duckdb_packaging.py  test_ci_error.sh  test_mre.py  test_packaging_runner.sh  test_uv_python.sh  test_warnings_mre.py
.github/workflows/: additional_testing.yml  cleanup_pypi.yml  coverage.yml  dev_testing.yml  on_pr.yml  on_push.yml  packaging.yml  packaging_sdist.yml  packaging_wheels.yml  packaging_wheels_local.yml
cmake/: duckdb_loader.cmake
duckdb/functional/: __init__.py
duckdb_packaging/: build_backend.py
scripts/: connection_methods.json
src/duckdb_py/: CMakeLists.txt  duckdb_python.cpp  module_state.cpp  pyconnection.cpp  pyresult.cpp  python_tvf.cpp
src/duckdb_py/functional/: functional.cpp
src/duckdb_py/include/duckdb_python/: module_state.hpp
src/duckdb_py/include/duckdb_python/pybind11/conversions/: python_tvf_type_enum.hpp
src/duckdb_py/include/duckdb_python/pyconnection/: pyconnection.hpp
src/duckdb_py/native/: python_conversion.cpp
tests/: conftest.py
tests/fast/: test_many_con_same_file.py  test_relation.py
tests/fast/api/: test_connection_interrupt.py  test_duckdb_connection.py  test_query_interrupt.py  test_to_csv.py
tests/fast/numpy/: test_numpy_new_path.py
tests/fast/threading/: README.md  test_basic_operations.py  test_concurrent_access.py  test_fetching.py  (+8 more)
tests/slow/: test_h2oai_arrow.py  test_relation_slow.py
util/: localbuild.sh
(+5 files in other folders)
